--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,6 +12,12 @@
         android:theme="@style/Theme.QuizzDeHistoria"
         tools:targetApi="31">
         <activity
+            android:name=".Tela5"
+            android:exported="false" />
+        <activity
+            android:name=".Tela4"
+            android:exported="false" />
+        <activity
             android:name=".Tela3"
             android:exported="false" />
         <activity
