--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,6 +12,21 @@
         android:theme="@style/Theme.QuizzDeHistoria"
         tools:targetApi="31">
         <activity
+            android:name=".TelaFinal"
+            android:exported="false" />
+        <activity
+            android:name=".Tela10"
+            android:exported="false" />
+        <activity
+            android:name=".Tela9"
+            android:exported="false" />
+        <activity
+            android:name=".Tela8"
+            android:exported="false" />
+        <activity
+            android:name=".Tela7"
+            android:exported="false" />
+        <activity
             android:name=".Tela6"
             android:exported="false" />
         <activity
